CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(project1)
ADD_COMPILE_OPTIONS(-std=c++11)

SET(CUR_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(INCDIRS include 3rd/include)
SET(LIBDIRS ${CUR_DIR}/lib ${CUR_DIR}/3rd/lib)
SET(SRCDIR src)
SET(LIB_LIST ${LIB_LIST} libhv_static.a pthread)

INCLUDE_DIRECTORIES(${INCDIRS})
LINK_DIRECTORIES(${LIBDIRS})
AUX_SOURCE_DIRECTORY(${SRCDIR} SRC_LIST)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIB_LIST})